buddy list: Fix issue where unread marker overlaps triple-dot.
Screenshot and original bug report here:
https://chat.zulip.org/#narrow/stream/9-issues/topic/Right.20sidebar.20bugs/near/1765231

--- a/web/styles/right_sidebar.css
+++ b/web/styles/right_sidebar.css
@@ -194,7 +194,7 @@ $user_status_emoji_width: 24px;
 }
 
 .user_sidebar_entry .selectable_sidebar_block {
-    width: calc(100% - 16px);
+    width: calc(100% - 26px);
     display: flex;
     flex-direction: row;
 }
